--- a/obras.html
+++ b/obras.html
@@ -154,7 +154,7 @@
             </h1>
             <div class="card">
                 <div class="img">
-                    <img src="/gogh/img/autorretrato_van_gogh.webp">
+                    <img src="/img/autorretrato_van_gogh.webp">
 
                     <div class="">
                         <h2>Autorretrato (1887)</h2>
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="img">
-                    <img src="/gogh/img/a_igreja_de_auvers_c.webp">
+                    <img src="/img/a_igreja_de_auvers_c.webp">
 
                     <div class="">
                         <h2>A Igreja de Auvers (1890)</h2>
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/gogh/img/a_noite_estrelada.webp">
+                    <img src="/img/a_noite_estrelada.webp">
 
                     <div class="">
                         <h2>A Noite Estrelada (1889)</h2>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/gogh/img/vincent_van_gogh_girassois_2.webp">
+                    <img src="/img/vincent_van_gogh_girassois_2.webp">
 
                     <div class="">
                         <h2>Os Girassóis (1888)</h2>
