--- a/obras.html
+++ b/obras.html
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="img">
-                    <img src="/img/a_igreja_de_auvers_c.webp">
+                    <img src="/a_igreja_de_auvers_c.webp">
 
                     <div class="">
                         <h2>A Igreja de Auvers (1890)</h2>
