--- a/curiosidades.html
+++ b/curiosidades.html
@@ -121,7 +121,7 @@
     </nav>
     <div class="container wrapper">
         <aside class="imagem_leo">
-            <img src="/gogh/img/vincent-van-gogh-l.webp">
+            <img src="img/vincent-van-gogh-l.webp">
             <div class="infos">
                 <p><strong>Ocupação:</strong> Pintor Holandês</p>
                 <p>
